[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sp-api = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-rpc = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-cli = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-core = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-service = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-network = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-manual-seal = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
sc-finality-grandpa = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

[build-dependencies]
substrate-build-script-utils = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
