[package]
name = "frontier-template-test-client"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-runtime = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-api = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-light = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
substrate-test-client = { tag = "v3.0.0", git = "https://github.com/paritytech/substrate.git" }
frontier-template-runtime = { path = "../../runtime" }
